vlib/v/checker/tests/unknown_sizeof_type_err_b.out
vlib/v/checker/tests/unknown_sizeof_type_err_b.vv:14:34: cgen error: unknown type `Zabc`
   12 |     println("size of Abc: ${sizeof(Abc)}")
   13 |     println("size of Xyz: ${sizeof(Xyz)}")
   14 |     println("size of Test: ${sizeof(Zabc)}")
      |                                     ~~~~
   15 | }
